mlton (20091015) unstable; urgency=low

  * Rebuild proper packages using the buildd
  * Added mips and mipsel architectures (bootstrap already uploaded)
  * Switch to debian native version numbers
  * Base the MLton version on the changelog

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Thu, 15 Oct 2009 21:09:17 +0200

mlton (20091013-1) unstable; urgency=low

  * New maintainer
  * New upstream version taken from svn r7263
  * Standards-version 3.8.3.0 (no changes)
  * Added alpha ia64 kfreebsd-i386 s390 ports
    * manual uploads of (half-broken) bootstrap packages will follow
  * Handle nostrip build option (closes: #437581)

 -- Wesley W. Terpstra (Debian) <terpstra@debian.org>  Wed, 14 Oct 2009 15:37:25 +0200

mlton (20070826-1) unstable; urgency=low

  * new upstream version

 -- Stephen Weeks <sweeks@sweeks.com>  Mon, 03 Sep 2007 13:34:12 -0400

mlton (20061107-1) unstable; urgency=low

  * new upstream version
  * Use max-heap 640m instead of fixed-heap 512m.  hopefully closes: #396980

 -- Stephen Weeks <sweeks@sweeks.com>  Tue, 07 Nov 2006 14:01:53 -0800

mlton (20061026-1) unstable; urgency=low

  * new upstream version
  * Eliminated broken "cd" in bin/make-pdf-guide.  closes: #394981

 -- Stephen Weeks <sweeks@sweeks.com>  Thu, 26 Oct 2006 12:04:20 -0700

mlton (20060213-1) unstable; urgency=low

  * new upstream version
  * Added dependence on libc6-dev.  closes: #352645

 -- Stephen Weeks <sweeks@sweeks.com>  Mon, 13 Feb 2006 10:16:46 -0800

mlton (20051202-1) unstable; urgency=low

  * new upstream version

 -- Stephen Weeks <sweeks@sweeks.com>  Thu, 01 Dec 2005 22:53:04 -0800

mlton (20051109-1) unstable; urgency=low

  * new upstream version

 -- Stephen Weeks <sweeks@sweeks.com>  Wed, 09 Nov 2005 18:47:04 -0800

mlton (20051102-1) unstable; urgency=low

  * new upstream version

 -- Stephen Weeks <sweeks@sweeks.com>  Wed, 02 Nov 2005 18:45:50 -0800

mlton (20050930-1) unstable; urgency=low

  * Fixed postinst problem.  closes: #329692
